--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
+            "@emailjs/browser": "^4.4.1",
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
             "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -50,11 +51,14 @@
             "vaul": "^1.1.2"
       },
       "devDependencies": {
+            "@tailwindcss/postcss": "^4.1.18",
             "@tailwindcss/typography": "^0.5.19",
             "@types/node": "^20.10.0",
             "@types/react": "^18.3.12",
             "@types/react-dom": "^18.3.1",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "autoprefixer": "^10.4.24",
+            "postcss": "^8.5.6",
             "vite": "^6.4.1"
       },
       "scripts": {
